# dotfiles

./: .cursorrules  .gitignore  .workmux.yaml  CLAUDE.md  CURSOR.md  QUICKSTART.md  README.md  requirements.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/audit/: APPS.md  BIN.md  FILTERED.md  GIT.md  HOMEBREW.md  SHELL.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specify/memory/: constitution.md  implementation-patterns.md
.specify/templates/: plan-template.md
modules/1password/: config.yml
modules/alfred/: config.yml
modules/bartender/: config.yml
modules/bun/: config.yml
modules/chatgpt/: config.yml
modules/chrome/: config.yml
modules/claude/: config.yml
modules/claude-squad/: config.yml
modules/cursor/: config.yml
modules/database/: config.yml
modules/discord/: config.yml
modules/docker/: config.yml
modules/dotm/: config.yml
modules/dotm/src/: pyproject.toml
modules/dotm/src/dotm/: __init__.py  __main__.py  analyze.py  catalog.py  cli.py  config.py  modules.py  security.py  sync.py  verify.py
modules/dotm/src/tests/: test_analyze.py  test_config.py  test_modules.py  test_security.py  test_verify.py
modules/dropbox/: config.yml
modules/editor/: config.yml
modules/example/: config.yml
modules/figma/: config.yml
modules/finances/: config.yml
modules/firefox/: config.yml
modules/flux/: config.yml
modules/fonts/: config.yml
modules/git/: config.yml
modules/go/: config.yml
modules/grammarly/: README.md  config.yml
playbooks/: deploy.yml  profiles.yml
(+158 files in other folders)
